--- a/wp-content/themes/NutraChamps/style.css
+++ b/wp-content/themes/NutraChamps/style.css
@@ -1,3 +1,9 @@
+/*
+
+Styling to be edited later
+
+*/
+
 @import url(//fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Oswald:400,300,700);
 
 
